[Update] Header has a large height by default and a collapsed height on mobile // [Fix] Minor incorrect settings

--- a/03_Studierende/David_Simon/07_Tatort_New/html/scss/main.scss
+++ b/03_Studierende/David_Simon/07_Tatort_New/html/scss/main.scss
@@ -6,6 +6,7 @@
 @import "_mixins";
 @import "_grid-settings";
 @import "_typo";
+@import "_nav";
 
 /* main.scss */
 
@@ -41,12 +42,13 @@ a:hover {
         @include span-columns(5);
         background: url('../media/tatort_fundus_logo_white.svg') no-repeat center left;
         background-size:250px;
-        height:60px;
+        height:$main-nav-height;
         float:left;
         @include media($mobile-l) {
-        @include span-columns(10);
+            @include span-columns(10);
             position:absolute;
             left:0;
+            height:$main-nav-height-small;
         }
     }
 }
@@ -59,7 +61,6 @@ a:hover {
             @include media($full) {
                 padding: 0 10px;
             }
-            min-height: 60px;
             background: $blue; //$grey-lighter;
             background-position: center center;
             margin-bottom: 15px;
@@ -133,10 +134,12 @@ $newsarticle: '.newsarticle';
         &--main {
             @include x-rem(font-size, 1.5);
             line-height:1.3;
-            margin:5px 10px;
+            font-weight: bold;
+            margin:10px 10px 6px;
             padding:0;
             a {
                 color: $blue;
+                font-weight: bold;
             }
         }
     }
@@ -146,19 +149,29 @@ $newsarticle: '.newsarticle';
         max-height:210px;
     }
     p {
-        margin:0 13px;
+        margin:0 10px;
     }
     &[max-width^="300px"] {
-        #{$n}__title {
-            &--main {
-                @include x-rem(font-size, 1.4);
+        #{$n}{
+            &__title {
+                &--main {
+                    @include x-rem(font-size, 1.2);
+                }
+            }
+            &__imgcontainer {
+                max-height:140px;
             }
         }
     }
-    &[max-width^="500px"] {
-        #{$n}__title {
-            &--main {
-                @include x-rem(font-size, 1.25);
+    &[max-width^="440px"] {
+        #{$n} {
+            &__title {
+                &--main {
+                    @include x-rem(font-size, 1.3);
+                }
+            }
+            &__imgcontainer {
+                max-height:180px;
             }
         }
     }
@@ -188,25 +201,6 @@ $title-resp: '.title-resp';
     &[max-width^="800px"] {
         @include x-rem(font-size, 1.2);
         padding: 6px 10px 8px;
-    }
-}
-
-.switcher {
-    @include outer-container;
-    padding: 0 15px;
-    margin-bottom: 10px;
-
-    display:none;
-    @include media($mobile-l) {
-        display: block;
-    }
-    &--button {
-        text-align: center;
-        font-weight: bold;
-        color: $grey-dark;
-        line-height: 4;
-        background: $grey-lighter;
-        border-radius: 2px;
     }
 }
 
@@ -267,72 +261,4 @@ $datatable: '.datatable';
     &--tablet { @include media($tablet) { display:none; } }
     &--desktop { @include media($desktop) { display:none; } }
     &--full { @include media($full) { display:none; } }
-}
-
-$main-nav: '.main-nav';
-#{$main-nav} {
-    $m: $main-nav;
-    @include span-columns(7);
-
-    float:left;
-    color:$text-color-inverted;
-    @include x-rem(font-size, 0.875);
-    font-weight: bold;
-
-
-    &__toggle {
-        display:none;
-        position:absolute;
-        right:0px;
-        top:0;
-        padding:0 20px;
-        @include x-rem(font-size, 1.5);
-        line-height:60px;
-        float:right;
-        cursor: pointer;
-    }
-    #main-nav__toggle-checkbox {
-        display:none;
-        &:checked + ul {
-            max-height:480px;
-        }
-    }
-    ul {
-        float:left;
-        display:block;
-        list-style: none;
-        margin: 0;
-        @include transition(max-height 0.2s linear);
-        max-height:60px;
-        overflow:hidden;
-        @include media($desktop) {
-            padding:0 10px 0 10px;
-        }
-    }
-    li {
-        float: left;
-        margin:0;
-        line-height:60px;
-        &:after {
-            content: '|';
-            padding: 0 10px;
-            @include media($desktop) {
-                padding: 0 5px;
-            }
-        }
-        &:last-child:after {
-            content: '';
-        }
-    }
-    //     &[max-width="400px"] {
-    @include media($mobile-l) {
-        @include span-columns(12);
-        #{$m}__toggle {
-            display:block;
-        }
-        ul {
-            max-height:0px;
-            padding: 60px 10px 0 10px;
-        }
-    }
 }
